# missiontrace-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md
missiontrace/: __init__.py
missiontrace/adapters/: __init__.py  _base.py  openai.py  tinyfish.py
missiontrace/core/: __init__.py  code_inspector.py  context.py  log_capture.py  models.py  sanitizer.py  transport.py
missiontrace/integrations/: github_mcp.py
missiontrace/utils/: serialization.py
tests/: test_api.py  test_context.py  test_models.py  test_openai_adapter.py  test_sanitizer.py  test_serialization.py  test_tinyfish_adapter.py  test_transport.py
